# AgenticZero

./: .gitignore  CLAUDE.md  FINAL_STATUS.md  Makefile  README.md  TEST_REORGANIZATION.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  test_api.py  test_new_architecture.py
examples/: graph_functions.py  run_graph.py  simple_graph_example.py  test_simple.py
examples/graph_configs/: conditional_flow.yaml  error_handling_flow.yaml  function_flow.yaml  parallel_flow.yaml  simple_flow.yaml
frontend/: .gitignore  package-lock.json  package.json
frontend/.storybook/: main.ts  preview.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: Header.stories.tsx  Header.tsx  MessageBubble.stories.tsx  MessageBubble.tsx  MessageList.stories.tsx  MessageList.tsx  SettingsDialog.tsx  SidebarPanel.stories.tsx  SidebarPanel.tsx  UserProfile.tsx  types.ts
frontend/hooks/: useAuth.ts
frontend/prisma/: schema.prisma
frontend/stores/: useSettingsStore.ts  useUserStore.ts
src/: test_minimal_agent.py  test_official_sdk.py
src/agent/: ARCHITECTURE.md  README.md  __init__.py  agent.py  core_engine.py  internal_mcp_client.py  llm_session_manager.py  mcp_client_factory.py  memory_manager.py  memory_mcp_server.py  message_history_manager.py  model_provider.py  session_context_manager.py  settings.py
src/agentic/: ARCHITECTURE.md  README.md  __init__.py  agent.py  context_manager.py  mcp_client.py  mcp_interface.py  mcp_provider.py  mcp_session_manager.py  model_provider.py  (+2 more)
tests/: test_composite_nodes.py  test_graph_config.py  test_graph_nodes.py
(+137 files in other folders)
